crates/ox_content_docs/src/markdown/tests/snapshots/markdown_member_parameters_follow_parameters_format__table_markdown.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces · 1 members_

## Modules

- [mod](./mod/index.md)
===== mod/index.md =====
# mod

_1 symbols · 1 interfaces · 1 members_

## Interfaces

- [Command](./interfaces/Command.md) - Command options.

===== mod/interfaces/Command.md =====
# Interface: Command

Command options.

## Signature

```ts
export function Command(): void
```

## Methods

### run()

```ts
run(ctx: Context): Promise<void>;
```

Runs the command.

#### Parameters

| Name | Type | Description |
| --- | --- | --- |
| `ctx` | `Context` | Runtime context. |
